--- a/APARControllerMaster/MainWindow.xaml
+++ b/APARControllerMaster/MainWindow.xaml
@@ -53,7 +53,8 @@
                                VerticalContentAlignment="Center">
                             设备地址
                         </Label>
-                        <TextBox Name="UnitAddrTextBox" Width="80" />
+                        <TextBox Name="UnitAddrTextBox" Width="80"
+                                 VerticalContentAlignment="Center" />
                     </StackPanel>
                     <StackPanel HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
@@ -63,13 +64,15 @@
                                VerticalContentAlignment="Center">
                             设备参数
                         </Label>
-                        <TextBox Name="UnitDataTextBox" Width="80" />
+                        <TextBox Name="UnitDataTextBox" Width="80"
+                                 VerticalContentAlignment="Center" />
                     </StackPanel>
                     <StackPanel HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
                                 Orientation="Horizontal">
                         <Button Name="SingleInputButton" Width="60"
-                                Height="30" Margin="5">
+                                Height="30" Margin="5"
+                                Click="SingleInputButton_Click">
                             单次输入
                         </Button>
                         <Button Name="ClearAllButton" Width="60"
@@ -85,7 +88,7 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
-            <Grid Grid.Column="0">
+            <Grid Grid.Column="0" Margin="5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="5*" />
@@ -115,13 +118,7 @@
                 </Grid>
             </Grid>
             <Grid Grid.Column="1">
-                <RichTextBox IsReadOnly="True">
-                    <!--  Using FlowDocument to display the received info  -->
-                    <FlowDocument FontFamily="Consolas" FontSize="14"
-                                  LineHeight="1.5">
-                        <Paragraph>Hello, This is Flow Document.</Paragraph>
-                    </FlowDocument>
-                </RichTextBox>
+                <TextBox FontFamily="Consolas" Text="{Binding Path=SerialRecvInfo}" />
             </Grid>
         </Grid>
     </Grid>
